--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>Hello World Alternativo</title>
 </head>
 <body>
-    Hello World
+    Hello World Alternativo
 </body>
 </html>
